feat: add secret expose

--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -33,14 +33,15 @@
                 <li class="list-group-item mb-2">3.10. Оформили текущий список в index.html проекта</li>
                 <li class="list-group-item mb-2">3.11. Создали секретный ключ и вывели его в приложении</li>
                 <li class="list-group-item mb-2">3.12. Нашли изменения в коде соседа и описали его комментарием</li>
-                <li class="list-group-item mb-2">3.13. Удалили в коде </li>
-                <li class="list-group-item mb-2">3.14. </li>
-                <li class="list-group-item mb-2">3.15. </li>
-                <li class="list-group-item mb-2">3.16. </li>
-                <li class="list-group-item mb-2">3.17. </li>
-                <li class="list-group-item mb-2">3.18. </li>
-                <li class="list-group-item mb-2">3.19. </li>
-                <li class="list-group-item mb-2">3.20. </li>
+                <li class="list-group-item mb-2">3.13. Удалили в коде index.html строки 2-12 и восстановили изменения</li>
+                <li class="list-group-item mb-2">3.14. Создали комментарий в index.html в соответствующей строке кода</li>
+                <li class="list-group-item mb-2">3.15. Создали скрипт</li>
+                <li class="list-group-item mb-2">3.16. Создали на GitHub публичный репозиторий и связали с replit</li>
+                <li class="list-group-item mb-2">3.17. Внесли изменения в index.html, чтобы он выводил дополнительные разделы</li>
+                <li class="list-group-item mb-2">3.18. Создали новую вутку в git</li>
+                <li class="list-group-item mb-2">3.19. Подключили соседа к реплике и выполнили конфликт слияния</li>
+                <li class="list-group-item mb-2">3.20. Проведели тестирование приложения</li>
+                <li class="list-group-item mb-2">Утекший секрет: {{ some_exposed_secret }}</li>
             </ul>
         </div>
 
