--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -41,6 +41,7 @@
                 <li class="list-group-item mb-2">3.18. Создали новую вутку в git</li>
                 <li class="list-group-item mb-2">3.19. Подключили соседа к реплике и выполнили конфликт слияния</li>
                 <li class="list-group-item mb-2">3.20. Проведели тестирование приложения</li>
+                <li class="list-group-item mb-2">Дополнительные разделы с fa.ru: {{ text_from_file }}</li>
                 <li class="list-group-item mb-2">Утекший секрет: {{ some_exposed_secret }}</li>
             </ul>
         </div>
