feat: complete task 3.14

--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -9,7 +9,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
+            crossorigin="amogymous"
         />
     </head>
     <body>
@@ -24,6 +24,9 @@
                 <li class="list-group-item mb-2">3.1. Переносли базы данных проекта</li>
                 <li class="list-group-item mb-2">3.2. Создали новое приложение tasks на Django</li>
                 <li class="list-group-item mb-2">3.3. Подключили приложение в конфигурацию</li>
+                <!-- Ким Михаил, что означает эта строка выше -->
+                <!-- Алексей отвечает Михаилу, что это строка добавляет пункт 3.3 в блок наших задач HTML -->
+                <!-- Ким Михаил добавляет оценку Алексею 5/5 за ответ на его вопрос -->
                 <li class="list-group-item mb-2">3.4. Перезагрузили сервер</li>
                 <li class="list-group-item mb-2">3.5. Вызвали функцию представления</li>
                 <li class="list-group-item mb-2">3.6. Добавили логику представления</li>
