feat: compolete task 3.12

--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -16,10 +16,13 @@
         {% csrf_token %}
         <div class="container">
             <br />
+
+            <!-- Ким Михаил крайне ответственно выполнил задачу и добавил свою фамилию в заголовок. -->
             <h2><strong>Task Tracker 📝 Ким М.А. </strong></h2>
 
             <br />
 
+            <!-- В данном блоке кода Ким Михаил добавил блок с пунктами выполнения задания. -->
             <ul class="list-group">
                 <li class="list-group-item mb-2">3.1. Переносли базы данных проекта</li>
                 <li class="list-group-item mb-2">3.2. Создали новое приложение tasks на Django</li>
@@ -49,6 +52,7 @@
             </ul>
         </div>
 
+        <!-- Ким Михаил добавил в конец страницы футер с утекшим секретом -->
         <footer class="container mt-5 mb-3">
             <hr>
             <p class="text-muted">Секрет: {{ some_exposed_secret }}</p>
