--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -49,6 +49,7 @@
                 <li class="list-group-item mb-2">3.20. Проведели тестирование приложения</li>
                 <li class="list-group-item mb-2">Дополнительные разделы с fa.ru: {{ text_from_file }}</li>
                 <li class="list-group-item mb-2">Утекший секрет: {{ some_exposed_secret }}</li>
+                <li class="list-group-item mb-2">Еще текст: {{ text_from_file2 }}</li>
             </ul>
         </div>
 
